Fixing test whitespace

--- a/tests/css/page.css
+++ b/tests/css/page.css
@@ -1,9 +1,7 @@
-#TrivialReporter
-{
-	display: none;
+#TrivialReporter {
+  display: none;
 }
 
-.f2-app-container
-{
-	display: none;
+.f2-app-container {
+  display: none;
 }
